# mder

./: .gitignore  AGENTS.md  CONTEXT.md  package-lock.json  package.json
docs/: windows-file-association.md
docs/adr/: 0001-use-tauri-for-the-desktop-shell.md  0002-ship-windows-first.md  0003-use-tabs-for-open-documents.md  0004-render-markdown-in-rust.md  0005-use-appdata-and-an-installer.md
docs/agents/: domain.md  issue-tracker.md
scripts/: copy-assets.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  markdown.rs
src-tauri/tests/: app_state.rs  open_markdown_document.rs
web/: document-tools.mjs  document-tools.test.mjs  index.html  main.js  styles.css  tabs.mjs  tabs.test.mjs
