[package]
name = "mder"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
ammonia = "4.1.2"
base64 = "0.22.1"
comrak = "0.52.0"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3.23.0"
